# Litho3D

./: .gitignore  CMakeLists.txt  Makefile.emscripten  premake5.lua
.github/workflows/: cmake.yml
Litho3D/assets/models/bed/: prusa_bed2.stl
Litho3D/includes/: Material.h  Model.h  PointLight.h  Scene.h  Shader.h  SpotLight.h  Texture.h
Litho3D/shaders/: shader.frag  shader.vert
Litho3D/src/: Mesh.cpp  Model.cpp  PointLight.cpp  Scene.cpp  Shader.cpp  SpotLight.cpp  main.cpp
Shaders/: shader.frag
assets/models/bed/: bed.mtl
assets/models/maya/: maya.mtl
includes/: Camera.h  DirectionalLight.h  Light.h  Mesh.h  Model.h  Scene.h  Shader.h  ShadowMap.h  Shapes.h  Texture.h  Window.h
src/: Camera.cpp  DirectionalLight.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  Scene.cpp  ShadowMap.cpp  Texture.cpp  Window.cpp  main.cpp
